# tree-sitter-buildlog

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml  release.yaml
bindings/c/: tree-sitter-buildlog.pc.in
bindings/c/tree_sitter/: tree-sitter-buildlog.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_buildlog/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBuildlogTests/: TreeSitterBuildlogTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: cargo_build.txt  clang22.txt
