[package]
name = "tree-sitter-buildlog"
description = "Tree-sitter grammar for parsing build logs"
version = "0.1.1"
authors = ["Nicholas Bishop <nbishop@nbishop.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "buildlog"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nicholasbishop/tree-sitter-buildlog"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.10"
